# cpp_contractgen

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: ContractGen.cmake
cpp_tests/: CMakeLists.txt  TestContract.hpp.contract  test_contracts.cpp
examples/: MyComb.hpp.contract  MyComp.hpp.contract
src/contractgen/: cli.py  generator.py  parser.py
src/cpp_contractgen/: __init__.py  __main__.py  cli.py  config.py  core.py  dummy_header.py  errors.py  files.py  generator.py  parser.py  policy.py  types.py  user_confirm.py
templates/: contract.hpp.j2
tests/: test_cli.py  test_config.py  test_core.py  test_files.py  test_generator.py  test_parser.py
