[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contractgen"
version = "0.1.0"
description = "C++ contract generator"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
contractgen = "contractgen.cli:main"
