[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contractgen"
version = "0.1.0"
description = "Generate C++ contracts, traits, and interfaces via custom syntax"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["jinja2"]

[project.scripts]
cpp-contractgen = "cpp_contractgen.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["build", "build-*", "build-tests", "dist", ".git", ".tox", ".venv", ".pio"]
